fixed large gap at end of news page

--- a/style.css
+++ b/style.css
@@ -4,14 +4,16 @@
 
 body {
     margin: 0;
-   
 }
-h2 ,h3{
+
+h2, h3 {
     font-family: 'Merriweather', serif;
 }
+
 p {
     font-family: 'Open Sans', sans-serif;
 }
+
 .content {
     position: relative;
     margin-left: 1vw;
@@ -51,13 +53,13 @@ p {
 div.content {
     margin-right: 25vw;
     padding-top: 1vh;
-    height: 1000px;
 }
 
 .mainImg {
     width: 72.5vw;
     height: auto;
-    padding-left: -15px;
+    position: absolute;
+    left: 0;
 }
 
 .mylogo {
@@ -74,7 +76,6 @@ div.content {
         position: absolute;
         background-color: white;
         margin-bottom: -5vh;
-        padding-left: 15px;
         width: 50vw;
         border-radius: 0 15px 0 0;
         left: 0;
@@ -91,9 +92,14 @@ div.content {
 
 .content div embed {
     width: 100%;
-    height: 80vh;
+    height: 100vh;
 }
-
+.content h2 {
+    font-size: 5vw;
+}
+.content h3{
+    font-size: 2vw;
+}
 @media screen and (max-width: 400px) {
     .mylogo {
         float: left;
